<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llProfileInfo"
        android:orientation="horizontal"
        android:padding="20dp"
        android:background="@color/tabColor"
        android:elevation="10dp"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Testing 123"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llProfileInfo"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_custom"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/update_first_name"
        />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFirstName"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_custom"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/update_last_name"
        />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLastName"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_custom"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/change_email"
        />

    <LinearLayout
        android:id="@+id/llDarkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/nightmode"
        />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llDarkMode"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/update"
        android:textStyle="bold"
        android:id="@+id/btnUpdate"
        android:backgroundTint="@color/tabColor"
/>


</RelativeLayout>